// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`binary_and_template.js format 1`] = `
====================================options=====================================
parsers: ["babel", "flow", "typescript"]
                                                      printWidth: 80 (default) |
=====================================input======================================
export default (function() {} + foo)\`\`;

=====================================output=====================================
export default (function () {} + foo)\`\`;

================================================================================
`;

exports[`body.js format 1`] = `
====================================options=====================================
parsers: ["babel", "flow", "typescript"]
                                                      printWidth: 80 (default) |
=====================================input======================================
export default (class {}[1] = 1);

=====================================output=====================================
export default (class {}[1] = 1);

================================================================================
`;

exports[`class_instance.js format 1`] = `
====================================options=====================================
parsers: ["babel", "flow", "typescript"]
                                                      printWidth: 80 (default) |
=====================================input======================================
export default (class {}.getInstance());

=====================================output=====================================
export default (class {}.getInstance());

================================================================================
`;

exports[`function_in_template.js format 1`] = `
====================================options=====================================
parsers: ["babel", "flow", "typescript"]
                                                      printWidth: 80 (default) |
=====================================input======================================
export default (function templ() {})\`foo\`;

=====================================output=====================================
export default (function templ() {})\`foo\`;

================================================================================
`;

exports[`function_tostring.js format 1`] = `
====================================options=====================================
parsers: ["babel", "flow", "typescript"]
                                                      printWidth: 80 (default) |
=====================================input======================================
export default (function() {}).toString();

=====================================output=====================================
export default (function () {}.toString());

================================================================================
`;

exports[`iife.js format 1`] = `
====================================options=====================================
parsers: ["babel", "flow", "typescript"]
                                                      printWidth: 80 (default) |
=====================================input======================================
export default (function foo() {})();

=====================================output=====================================
export default (function foo() {})();

================================================================================
`;
